# Stock-Advisor

./: .gitignore  LICENSE  Makefile  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: backend_logger.py  main.py
backend/app/config/: database.py
backend/app/data/: yfinance_data.py
backend/app/models/: db_models.py
backend/app/routes/: auth.py  session.py
frontend/: Dockerfile  pyproject.toml
frontend/app/: app.py  frontend_logger.py
frontend/app/config/: keys.py
frontend/app/pages/: _1_Dashboard.py  _2_Profile.py  _3_Portfolio.py
frontend/app/utils/: api_client.py  portfolio_client.py  profile_client.py
